# nesper

./: Makefile  README.md  example_i2cs.nim  nesper.nimble  nim.cfg
.github/workflows/: Dockerfile  docker-publish.yml  main.yml
docker/: Dockerfile  build_docker.sh  run_shell.sh
esp-idf-examples/: README.md  nim.cfg
esp-idf-examples/app_test/: .gitignore  app_test.nimble  clean.sh
esp-idf-examples/i2s/: CMakeLists.txt  i2s.nimble  sdkconfig
esp-idf-examples/simple-rpc/: Makefile  build-all.sh  config.nims  sdkconfig.old  simple_rpc.nimble
esp-idf-examples/simple_rpc/: CMakeLists.txt  Makefile  README.md  config.nims  sdkconfig
esp-idf-examples/simple_rpc/main/: CMakeLists.txt  apps.nim  server.nim
esp-idf-examples/simpleeth/: .gitignore  CMakeLists.txt  README.md  config.nims
esp-idf-examples/simplewifi/: CMakeLists.txt  Makefile  README.md  config.nims  sdkconfig  sdkconfig.old
esp-idf-examples/simplewifi-rpc/: .gitignore  CMakeLists.txt  Makefile  README.md  build-all.sh  config.nims  rpc_cli_test.nim  sdkconfig
nesper/c_headers/: esp_log.h  i2c_types.nim  nvs.h  uart.nim
src/: FreeRTOS.nim  consts.nim  consts2.nim  esp_event.nim  esp_log.nim  esp_vfs_dev.nim  general.nim  i2c.nim  nesper.nim  nvs.nim  queue.nim  uart.nim  uart_reg.nim
src/c_headers/: consts.h  spi_master.h  spi_master.nim  uart.h
src/nesper/: build_tasks.nim  consts.nim  eth.nim  ethernet.nim  events.nim  general.nim  gpios.nim  i2cs.nim  net_utils.nim  nvs.nim  nvs_utils.nim  ota_utils.nim  queue_utils.nim  queues.nim  serial_utils.nim  soc.nim  spi.nim  spis.nim  submodule.nim  tasks.nim  timer_utils.nim  timers.nim  uarts.nim  wifi.nim
src/nvs/: nvs_flash.nim
tests/: .gitignore  commands.sh  compile_rpc_cli.sh  echosocket_test.nim  mrpc_test.nim  nim.cfg  rpc_cli.nim  rpc_cli_test.nim  rpc_ota_uploader.nim  tconsts  tconsts.nim  test1.nim  test_repr.nim  teth_modules.nim  tethernet.nim  tgeneral.nim  tgpios.nim  ti2cs.c  ti2cs.nim  tledc.nim  tmdns.nim  tnvs.nim  tqueues.nim  trouter.nim  tserial_utils.nim  tsocket_echo.nim  tspi.nim  tuarts.nim
tests/c_headers/: esp_app_format.h  esp_eth.h  esp_eth_mac.h  esp_eth_phy.h  esp_event_base.h  esp_event_base.nim  esp_flash_encrypt.h  esp_flash_partitions.h  esp_netif_defaults.h  esp_partition.h  esp_spi_flash.h  esp_system.h  esp_timer.h  esp_wifi.h  esp_wifi_types.h  esp_wifi_types.nim  ethernet_example_main.c  ethernet_example_main.nim  event_groups.h  i2s_adc_example.c  io_mux_reg.h  io_mux_reg.nim  ip4_addr.h  ip4_addr.nim  ip_addr.h  ip_addr.nim  ledc_example_main.c  ledc_example_main.nim  list.h  list.nim  native_ota_example.c  native_ota_example.nim  other.h  other.nim  projdefs.h  projdefs.nim  replace-cint_t-to-nim-types.sh  rmt_struct.h  soc.h  spi_master.nim  (+6 more)
tests/compile_tests/: tgeneral  tgeneral.nim
tests/driver/: tadc.nim  tadc2_wifi_internal.nim  (+20 more)
tests/esp-idf-examples/simpleeth/main/: CMakeLists.txt  ethernet_example_main.c  main  main.nim  nim.cfg
tests/esp-idf-examples/simpleeth/main/nimcache/: @mmain.nim.c  assertions.ndi  asyncdispatch.ndi  asyncfutures.ndi  asynchttpserver.ndi  asyncnet.ndi  base64.ndi  compile_main.sh  deques.ndi  dollars.ndi  hashes.ndi  heapqueue.ndi  httpcore.ndi  io.ndi  main.deps  main.json  main.ndi  math.ndi  memory.ndi  monotimes.ndi  nativesockets.ndi  net.ndi  options.ndi  os.ndi  posix.ndi  selectors.ndi  stdlib_assertions.nim.c  stdlib_asyncdispatch.nim.c  stdlib_asyncfutures.nim.c  stdlib_asynchttpserver.nim.c  stdlib_asyncnet.nim.c  stdlib_base64.nim.c  stdlib_cstrutils.nim.c  stdlib_deques.nim.c  stdlib_dollars.nim.c  stdlib_hashes.nim.c  stdlib_heapqueue.nim.c  stdlib_httpcore.nim.c  stdlib_io.nim.c  stdlib_math.nim.c  (+18 more)
(+292 files in other folders)
